# websocket-react-cpp

./: .gitignore
client/: package-lock.json  package.json
client/public/: manifest.json
client/src/: App.js
server/: .gitignore  CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp
